--- a/src/theme/colors.scss
+++ b/src/theme/colors.scss
@@ -2,9 +2,12 @@ $body-color: #f5f5f5;
 $icon-color: #666666;
 $separator-color: #e9e9e9;
 $shadow-color: rgba(0, 0, 0, 0.05);
-$gradient-icon-start: rgba(237, 0, 94, 1);
-$gradient-icon-end: rgba(255, 122, 0, 1);
+$shadow-color-darker: rgba(0, 0, 0, 0.15);
+$primary-color: rgba(237, 0, 94, 1);
+$secundary-color: rgba(255, 122, 0, 1);
 $table-background: #f5f5f5;
 $table-background-stripping: #e9e9e9;
 $user-ativo: #00c525;
 $default-text-color: #333;
+$footer-color: #2d2d2d;
+$footer-color-secundary: #272727;
